# FastAPU-google-auth

./: docker-compose.yml  pyproject.toml
src/: .env  alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: dd2d8a556127_добавлены_пользователи.py  e45efbcc592a_начальная_миграция.py
src/contracts/: __init__.py  auth.py  books.py  token.py  user.py
src/core/: config.py  security.py  utils.py
src/dependencies/: __init__.py  database.py  user.py
src/models/: __init__.py  books.py  user.py
src/queries/: books.py  user.py
src/routes/: __init__.py  auth.py  books.py  user.py
